objects/LAT_Produto_POP__c.object
<CustomObject>
    <fields>
        <fullName>Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coletar Evidência?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Realizar Inventário?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marca Associada</label>
        <referenceTo>LAT_KeyBrand__c</referenceTo>
        <relationshipName>Produtos_POP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <label>Material Pai</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sku__c</fullName>
        <label>Código Material</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_Material__c</fullName>
        <label>Validade Material (meses)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_evidence__c</fullName>
        <label>Prazo Evidência (dias)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Material POP</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Materiais_POP</fullName>
        <columns>NAME</columns>
        <columns>Sku__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Key_Brand__c</columns>
        <columns>Evidence__c</columns>
        <columns>Valid_evidence__c</columns>
        <columns>Valid_Material__c</columns>
        <columns>Inventory__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Materiais POP</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>Descrição Material</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materiais POP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>